Mac: Always layout the Download Shelf, even if it has zero height.

Even when the download shelf has zero height, Cocoa autolayout can
change its width. It does this when going fullscreen. However, not when
exiting fullscreen.

If the download shelf is visible (i.e. has non-zero height), then
-[BrowserWindowController applyLayout:] does the layout instead.
However, currently that layout is skipped if the download shelf is
hidden. This can leave the download shelf with a stale width that
influences the Cocoa autolayout applied when the browser window is
user-resized. This, in turn, can result in the browser window refusing
to violate a constraint that would break when the browser window is
resized to be small.

To fix, always set the download shelf frame, even if it has zero height.
This ensures the width is valid, even when hidden.

BUG=664477
TEST=On Mac (10.11 or 10.12) Open a new browser window (without a
download shelf). Resize the window to be "large", then make it
fullscreen (e.g. Cmd+Ctrl+f). Exit fullscreen (e.g. Cmd+Ctrl+f), then
resize the window again to try to make it "small". Ensure the width can
be made small as normal.

Review-Url: https://codereview.chromium.org/2502533002
Cr-Commit-Position: refs/heads/master@{#432024}