chrome/browser/ui/cocoa/browser_window_controller_private.mm
@@ -918,8 +918,7 @@ willPositionSheet:(NSWindow*)sheet
   [infoBarContainerController_
       setInfobarArrowX:[self locationBarBridge]->GetPageInfoBubblePoint().x];
 
-  if (!NSIsEmptyRect(output.downloadShelfFrame))
-    [[downloadShelfController_ view] setFrame:output.downloadShelfFrame];
+  [[downloadShelfController_ view] setFrame:output.downloadShelfFrame];
 
   [self layoutTabContentArea:output.contentAreaFrame];
 
